# postgrest-rust

./: Cargo.toml  Dockerfile  LICENSE-APACHE  PERFORMANCE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
bench/: k6.js
docs/: DESIGN.md  FUTURE.md
pg-pool/: Cargo.toml
pg-pool/src/: async_wire.rs  lib.rs  pool.rs  wire.rs
pg-pool/tests/: conn_pool_test.rs  pool_test.rs
pg-query-engine/: Cargo.toml
pg-query-engine/src/: ast.rs  error.rs  lib.rs  parser.rs  sql.rs
pg-query-engine/tests/: proptest.rs
pg-rest-server/: Cargo.toml
pg-rest-server-resolute/: Cargo.toml
pg-rest-server-resolute/src/: error.rs  handlers.rs  lib.rs  main.rs  openapi.rs  state.rs
pg-rest-server-resolute/tests/: integration.rs
pg-rest-server-tokio-postgres/: Cargo.toml
pg-rest-server-tokio-postgres-deadpool/: Cargo.toml
pg-rest-server-tokio-postgres-deadpool/src/: error.rs  handlers.rs  lib.rs  main.rs  openapi.rs  state.rs
pg-rest-server-tokio-postgres-deadpool/tests/: integration.rs
pg-rest-server-tokio-postgres-pg-wired/: Cargo.toml
pg-rest-server-tokio-postgres-pg-wired/src/: error.rs  handlers.rs  main.rs  openapi.rs  state.rs
pg-rest-server-tokio-postgres-pg-wired/tests/: integration.rs
pg-rest-server-tokio-postgres/src/: error.rs  handlers.rs  main.rs  state.rs
pg-rest-server-tokio-postgres/tests/: integration.rs
pg-rest-server-v2/: Cargo.toml
pg-rest-server-v2/src/: auth.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
pg-rest-server-v2/tests/: integration.rs
pg-rest-server/src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
pg-rest-server/tests/: integration.rs
pg-schema-cache/: Cargo.toml
pg-schema-cache-resolute/: Cargo.toml
pg-schema-cache-resolute/src/: error.rs  introspection.rs  lib.rs
pg-schema-cache-tokio-postgres/: Cargo.toml
pg-schema-cache-tokio-postgres/src/: introspection.rs  lib.rs  listener.rs
pg-schema-cache-types/: Cargo.toml
pg-schema-cache-v2/: Cargo.toml
pg-schema-cache-v2/src/: error.rs  introspection.rs  lib.rs  listener.rs
pg-schema-cache/src/: error.rs  introspection.rs  listener.rs  types.rs
pg-typed/: Cargo.toml  IMPROVEMENTS.md  README.md
pg-typed-cli/: Cargo.toml
pg-typed-cli/src/: database.rs  main.rs  migrate.rs
pg-typed-derive/: Cargo.toml
pg-typed-derive/src/: lib.rs  pg_composite.rs  pg_domain.rs  pg_enum.rs
pg-typed-macros/: Cargo.toml
pg-typed-macros/src/: cache.rs  lib.rs
pg-typed/benches/: encode_decode.rs  query_latency.rs
pg-typed/examples/: basic_crud.rs  copy_bulk.rs  custom_types.rs  named_params.rs  retry_pool.rs  streaming.rs  transactions.rs
pg-typed/src/: checked.rs  decode.rs  encode.rs  error.rs  executor.rs  lib.rs  listener.rs  metrics.rs  migrate.rs  named_params.rs  newtypes.rs  oid.rs  pg_type.rs  pooled.rs  query.rs  reconnect.rs  retry.rs  row.rs  test_db.rs  types.rs
pg-typed/tests/: compile_test.rs  pool_integration_test.rs  proptest_encode_decode.rs  query_macro_test.rs  typed_test.rs
pg-typed/tests/compile_fail/: mixed_positional_named.rs  mixed_positional_named.stderr  wrong_param_count.rs  wrong_param_count.stderr
pg-typed/tests/sql/: count_authors.sql  get_author.sql
pg-wire/: Cargo.toml
pg-wire/src/: async_conn.rs  async_pool.rs  cancel.rs  conn_pool.rs  connection.rs  error.rs  lib.rs  pipeline.rs  pool.rs  scram.rs  tls.rs
pg-wire/src/protocol/: backend.rs  frontend.rs  types.rs
pg-wire/tests/: async_pool_test.rs  async_test.rs  basic.rs  conn_pool_test.rs
test/compat/: Cargo.toml  docker-compose.yml  pg-rest-compat.toml
test/compat/src/: main.rs
test/compat/src/cases/: auth.rs  cors.rs  edge_cases.rs  embedding.rs  explain.rs  json_ops.rs  logic_filters.rs  mod.rs  mutations.rs  pagination.rs  query.rs  rpc.rs  singular.rs
test/fixtures/: bench-config.toml  setup.sql  setup_extended.sql  test-config.toml
