[workspace]
members = ["pg-schema-cache-types", "pg-schema-cache-tokio-postgres", "pg-schema-cache-resolute", "pg-query-engine", "pg-rest-server-tokio-postgres-pg-wired", "pg-rest-server-tokio-postgres-deadpool", "pg-rest-server-resolute", "test/compat"]
resolver = "2"

[workspace.dependencies]
pg-wired = "0.3"
pg-pool = "0.3"
resolute = "0.4"
resolute-derive = "0.1"
resolute-macros = "0.2"
resolute-cli = "0.2"
