[package]
name = "pg-rest-server-resolute"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates — NO tokio-postgres
pg-schema-cache-resolute = { path = "../pg-schema-cache-resolute" }
pg-query-engine = { path = "../pg-query-engine" }
pg-wired = { workspace = true }
resolute = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework + middleware
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }

# JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config + CLI
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[features]
default = []
tls = ["pg-wired/tls"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
