[package]
name = "pg-rest-server-resolute"
description = "PostgREST-compatible REST API server backed by the resolute database client (zero tokio-postgres on the data path)."
keywords = ["postgres", "postgrest", "rest", "api", "resolute"]
categories = ["database", "web-programming::http-server"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Internal crates, NO tokio-postgres
pg-schema-cache-resolute = { path = "../pg-schema-cache-resolute", version = "0.2.0" }
pg-query-engine = { path = "../pg-query-engine", version = "0.2.0" }
pg-wired = { workspace = true }
resolute = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework + middleware
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }

# JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config + CLI
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[features]
default = []
tls = ["pg-wired/tls"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
