[package]
name = "pg-rest-server-tokio-postgres-deadpool"
description = "PostgREST-compatible REST API server backed by tokio-postgres and deadpool-postgres (pure tokio-postgres data path, no pg-wired)."
keywords = ["postgres", "postgrest", "rest", "api", "deadpool"]
categories = ["database", "web-programming::http-server"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Internal crates
pg-schema-cache-tokio-postgres = { path = "../pg-schema-cache-tokio-postgres", version = "0.1.0" }
pg-query-engine = { path = "../pg-query-engine", version = "0.1.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Connection pool: deadpool-postgres (no pg-wired in the data path).
deadpool-postgres = "0.14"

# Web framework + middleware
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokio-postgres-rustls = { version = "0.12", optional = true }
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "0.26", optional = true }

# JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config + CLI
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[features]
default = []
tls = ["tokio-postgres-rustls", "rustls", "webpki-roots"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
