[package]
name = "pg-rest-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
pg-schema-cache = { path = "../pg-schema-cache" }
pg-query-engine = { path = "../pg-query-engine" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework + middleware
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Database
tokio-postgres = "0.7"
deadpool-postgres = "0.14"

# JWT
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config + CLI
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
