[package]
name = "pg-schema-cache-resolute"
version = "0.1.0"
edition = "2021"

[dependencies]
pg-schema-cache-tokio-postgres = { path = "../pg-schema-cache-tokio-postgres" }
resolute = { workspace = true }
resolute-derive = { workspace = true }
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
thiserror = "2"
