[package]
name = "pg-schema-cache-resolute"
description = "PostgreSQL schema cache built on the resolute database client, with LISTEN/NOTIFY-driven reload."
keywords = ["postgres", "postgresql", "schema", "cache", "resolute"]
categories = ["database"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
pg-schema-cache-types = { path = "../pg-schema-cache-types", version = "0.1.0" }
resolute = { workspace = true }
resolute-derive = { workspace = true }
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
thiserror = "2"
