[package]
name = "pg-schema-cache-tokio-postgres"
description = "PostgreSQL schema cache built on tokio-postgres, with LISTEN/NOTIFY-driven reload."
keywords = ["postgres", "postgresql", "schema", "cache", "tokio-postgres"]
categories = ["database"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
pg-schema-cache-types = { path = "../pg-schema-cache-types", version = "0.2.0" }
tokio = { version = "1", features = ["sync", "rt"] }
tokio-postgres = "0.7"
tracing = "0.1"
thiserror = "2"
