[package]
name = "pg-schema-cache-types"
description = "Driver-agnostic PostgreSQL schema cache data types (tables, columns, functions, relationships)."
keywords = ["postgres", "postgresql", "schema", "cache", "introspection"]
categories = ["database"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
