[package]
name = "pg-typed-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pg-typed-cli"
path = "src/main.rs"

[dependencies]
pg-wire = { path = "../pg-wire" }
tokio = { version = "1", features = ["rt", "net", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
