[package]
name = "pg-typed-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
pg-wire = { path = "../pg-wire" }
tokio = { version = "1", features = ["rt", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
