[package]
name = "pg-typed"
version = "0.1.0"
edition = "2021"

[dependencies]
pg-wire = { path = "../pg-wire" }
pg-typed-derive = { path = "../pg-typed-derive" }
bytes = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", optional = true, default-features = false, features = ["std"] }
serde_json = { version = "1", optional = true }
uuid = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["clock"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["chrono", "json", "uuid"]
chrono = ["dep:chrono"]
json = ["dep:serde_json"]
uuid = ["dep:uuid"]
