[package]
name = "pg-typed"
version = "0.1.0"
edition = "2021"

[dependencies]
pg-wire = { path = "../pg-wire" }
pg-typed-derive = { path = "../pg-typed-derive" }
pg-typed-macros = { path = "../pg-typed-macros" }
pg-pool = { path = "../pg-pool" }
bytes = "1"
thiserror = "2"
tracing = "0.1"
arc-swap = "1"
tokio-stream = "0.1"
tokio = { version = "1", features = ["sync"] }
chrono = { version = "0.4", optional = true, default-features = false, features = ["std"] }
serde_json = { version = "1", optional = true }
uuid = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["clock"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
trybuild = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

[[bench]]
name = "encode_decode"
harness = false

[[bench]]
name = "query_latency"
harness = false

[features]
default = ["chrono", "json", "uuid"]
chrono = ["dep:chrono"]
json = ["dep:serde_json"]
uuid = ["dep:uuid"]
