[package]
name = "pg-wire"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros"] }
bytes = "1"
md5 = "0.7"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.9"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
