[package]
name = "pg-wire"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros", "time"] }
bytes = "1"
md5 = "0.7"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.9"
thiserror = "2"
tracing = "0.1"
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", optional = true }
rustls-pki-types = { version = "1", optional = true }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
tls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pki-types", "dep:webpki-roots"]
