[package]
name = "compat-test"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "compat-test"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
clap = { version = "4", features = ["derive"] }
